--- a/MogglesClient/MogglesClient.csproj
+++ b/MogglesClient/MogglesClient.csproj
@@ -53,5 +53,11 @@
   <PropertyGroup Condition=" '$(TargetFramework)' == 'net452' OR '$(TargetFramework)'=='net462'">
     <DefineConstants>NETFULL</DefineConstants>
   </PropertyGroup>
+
+  <ItemGroup>
+      <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+          <_Parameter1>MogglesClientTests</_Parameter1>
+      </AssemblyAttribute>
+  </ItemGroup>
   
 </Project>
