added cooldowns to stop notification spamming

--- a/MogglesClient/MogglesClient.csproj
+++ b/MogglesClient/MogglesClient.csproj
@@ -76,4 +76,8 @@
       <_Parameter1>MogglesClientTests</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="PublicInterface\NotificationsCache\" />
+  </ItemGroup>
 </Project>
